# automated-monitoring-system

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  aiops-monitoring-dashboard.json  pyproject.toml
ansible/: playbook.yml
ansible/files/: grafana.ini  prometheus.yml
ansible/group_vars/: all.yml
ansible/roles/aiops/files/: anomaly_detector.py  metrics_exporter.py
ansible/roles/aiops/tasks/: main.yml
ansible/roles/aiops/templates/: aiops-cronjob.j2  aiops.service.j2  aiops_env.j2
ansible/roles/common/tasks/: main.yml
ansible/roles/grafana/tasks/: main.yml
ansible/roles/grafana/templates/: grafana.ini.j2
ansible/roles/node_exporter/tasks/: main.yml
ansible/roles/prometheus/tasks/: main.yml
ansible/roles/prometheus/templates/: prometheus.yml.j2
docs/: metrics.md
infra/: ec2.tf  network.tf  outputs.tf  variables.tf  versions.tf
local_test/: .gitignore  README.md  anomaly_detector_local.py  metrics_exporter_local.py  test_runner.py
scripts/: deploy.sh  destroy.sh  wait-for-ssh.sh
