[project]
name = "automated-monitoring-system"
version = "0.1.0"
description = "Automated monitoring system with AIOps capabilities"
requires-python = ">=3.9"
dependencies = [
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["local_test*", "ansible*"]

[tool.uv.workspace]
members = [
    "ansible/scripts",
]
